manifest/objects/Apttus_Approval__ReminderInstance__c.object
<CustomObject>
    <description>Specifies runtime information for process step and subprocess reminders.</description>
    <fields>
        <fullName>Apttus_Approval__ApprovalRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Request Id</label>
        <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
        <relationshipLabel>Reminder Instances</relationshipLabel>
        <relationshipName>Reminder_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Step Id</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Reminder Instances</relationshipLabel>
        <relationshipName>Reminder_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ScheduledFireTime__c</fullName>
        <label>Scheduled Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <label>Step Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepType__c</fullName>
        <label>Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Child Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessRuleEntryAssigneeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subprocess Rule Entry Assignee Id</label>
        <referenceTo>Apttus_Approval__ApprovalRuleAssignee__c</referenceTo>
        <relationshipLabel>Reminder Instances</relationshipLabel>
        <relationshipName>ApprovalRuleAssigneeReminderInstances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessRuleEntryAssigneeSeq__c</fullName>
        <label>Subprocess Rule Entry Assignee Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reminder Instance</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__ApprovalRequestId__c</columns>
        <columns>Apttus_Approval__Label__c</columns>
        <columns>Apttus_Approval__ScheduledFireTime__c</columns>
        <columns>Apttus_Approval__Completed__c</columns>
        <columns>Apttus_Approval__StepType__c</columns>
        <columns>Apttus_Approval__ProcessStepId__c</columns>
        <columns>Apttus_Approval__StepSequence__c</columns>
        <columns>Apttus_Approval__SubprocessRuleEntryAssigneeId__c</columns>
        <columns>Apttus_Approval__SubprocessRuleEntryAssigneeSeq__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REMI-{000000}</displayFormat>
        <label>Reminder Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>